Kubernetes/namespace.yml
kind: Namespace
apiVersion: v1
metadata:
  name: prodns

#############################################################

#kind: namepsace
#apiVersion: v1
#metadata:
 # namespace: dev


#####################################################

#kind: Namespace
#apiVersion: v1
#metadata:
 # name: testing

################################################################

kind: Namespace
apiVersion: v1
metedata:
  namespace: development

################################################################

kind: Namespace
apiVersion: v1
metadata:
  name: development

###################################################################
