Kubernetes/daemonset.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: node-exporter
  namespace: monitoring
  labels:
    app: node-exporter
spec:
  selector:
    matchLabels:
      app: node-exporter
  template:
    metadata:
      labels:
        app: node-exporter
    spec:
      # Bypasses normal pod network isolation so it can read host network stats
      hostNetwork: true
      hostPID: true
      containers:
      - name: node-exporter
        image: prom/node-exporter:v1.8.0
        resources:
          requests:
            cpu: "50m"
            memory: "64Mi"
          limits:
            cpu: "100m"
            memory: "128Mi"
        securityContext:
          privileged: true
        volumeMounts:
        - name: proc
          mountPath: /host/proc
          readOnly: true
        - name: sys
          mountPath: /host/sys
          readOnly: true
      volumes:
      - name: proc
        hostPath:
          path: /proc
      - name: sys
        hostPath:
          path: /sys

#########################################################################################################

kind: DaemonSet
apiVersion: apps/v1
metadata:
  name: node-exporter
  namespace: monitoring
  labels:
    app: node-exporter
spec:
  selector:
    matchLabels:
      app: node-exporter
  template:
    metadata:
      labels:
        app: node-exporter
    spec:
      hostNetwork: true
      hostPID: true 
      containers:
      - name: node-exporter-cont
        image: prom/node-exporter:v1.8.0
        resources:
          requests:
            memory: "256Mi"
            cpu:  "128m"
          limits:
            memory: "512Mi"
            cpu: "256m"
        securityContext:
          privilaged: true
        volumeMounts:
        - name: proc
          mountPath: /host/proc
          readOnly: true
        - name: sys
          mountPath: /host/sys
          readOnly: true
      volumes:
      - name: proc
        hostPath:
          path: /proc
      - name: sys
        hostPath:
          path: /sys


##################################################################################################################

kind: DaemonSet
apiVersion: apps/v1
metadata:
  name: node-exporter
  namespace: monitoring
spec:
  labels: node-exporter
  selectors:
    matchLabels:
      app: node-exporter
  template:
    metadata:
      labels:
        app: node-exporter
    spec:
      hostNetwork: true
      hostPID: true
      containers:
      - name: node-export-cont
        image: prom/node-exporter:v1.8.0
        resources:
          requests:
            memory: "256Mi"
            cpu: "128m"
          limits:
            memory: "512Mi"
            cpu: "256m"
        volumeMounts:
        securityContext:
          privilaged: true
        volumeMounts:
        - name: proc
          mountPaths: /host/proc
          readOnly: true
        - name: sys
          mountPath: /host/sys
          readonly: true
      volumes:
      - name: proc
        hostPath:
          path: /proc
      - name: sys
        hostPath:
          path: /sys


##########################################################################################################


kind: DaemonSet
apiVersin: apps/v1
metadata: 
  name: node-logs
  namespace: kube-system
spec:
  selector: 
    matchLabels:
      app: log-agent
  template:
    metadata:
      labels: 
        app: log-agent
    spec:
      containers:
      - name: log-collector
        image: alpine:latest
        command: ["sh", "-c", "while true: do echo 'logging background node metrics...'"]
        resources: 
          requests:
            cpu: "10m"
            memory: "32Mi"
          limits:
            cpu: "20m"
            memory: "64Mi"

 
####################################################################################################

kind: DaemonSet
apiVersion: apps/v1
metadata:
  name: node-log
  namespace: kube-system
spec:
  selector:
    matchLabels:
      app: log-agent
  template:
    metadata:
      labels:
        app: log-agent
    spec:
      containers:
      - name: log-collector
        image: alpine:latest
        command: ["sh", "-c", "while true: do echo 'logging background node metrics....';sleep 10; done"]
        resources:
          requests:
            memory: "64Mi"
            cpu: "32m"
          limits:
            memory: "128Mi"
            cpu: "64m"



        
###############################################################################################################################

kind: DaemonSet
apiVersion: apps/v1
metadata: 
  name: node-log
  namespace: kube-system
spec:
  selector:
    matchLabels: 
    app: log-agent
  template: 
    metadata:
      labels:
        app: log-agent
    spec:
      containers:
      - name: log-collector
        image: alpine:latest
        commands: ["sh", "-c", "while true: do echo 'logging background node metrics...'; seep 10; done"]
        resources: 
          requests:
            memory: "64Mi"
            cpu: "32m"
          limits:
            memory: "128Mi"
            cpu: "64m"
