Kubernetes/pod.yml
kind: Pod
apiVersion: v1
metadata:
  name: prod
  namespace: prodns
spec:
  containers:
  - name: nginx-container
    image: nginx


########################################################################

kind: pod
apiVersion: v1
metadata:
  name: django
spec:
  containers:
  - name: django-pod
    image: python:3.11-slim
    ports:
    - containerPort: 80

############################################################################

kind: pod
apiVersion: v1
metadata:
  name: node
spec:
  containers:
  - name: node-cont
    image: node:19-slim
    ports:
    - containerPort: 80


############################################################################

kind: pod
apiVersion: v1
metadata:
  name: node
spec:
  containers:
  - name: node-cont
    image: node-19-slim
    ports:
    - containerPort: 80

###########################################################################


kind: pod
apiVersion: v1
metadata:
  name: node
spec:
  containers:
  - name: node-cont
    image: node:19-slim
    ports:
    - containerPort: 80

####################################################################################



kind: Pod
apiVersion: v1
metadata:
  name: node-pod
spec:
  containers:
  - name: node-cont
    image: node:19-slim
    ports:
    - containerPort: 80


##############################################################################

kind: Pod
apiVersion: v1
metadata:
  name: node-pod
spec:
  containers:
  - name: node-cont
    image: node:19-slim
    ports:
    - containerPort: 80


####################################################################################


kind: Pod
apiVersion: v1
metadata:
  name: node-app
  namespace: nodes-app
spec:
  containers:
  - name: node-cont
    image: node:19-slim
    ports:
    - containerPort: 80

#################################################################################

kind: Pod
apiVersion: v1
metadata:
  name: node-pod
  namespace: node-app
spec: 
  conatiners:
  - name: node-cont
    image: node:19-slim
    ports:
    - conatinerPort: 80
