Kubernetes/service.yml
kind: Service
apiVersion: v1
metadata:
  name: django-service
  namespace: django-app
spec:
  selector:
    app: django
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP


#######################################################################


kind: Service
apiVersion: v1
metadata:
  name: djnago-app
  namespace: django-app
spec:
  selector:
    app: django
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP


#################################################################################

kind: Service
apiVersion: v1
metadata:
  name: node-pod
  namespace: node-app
spec:
  selector:
    app: node
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: CLusterIP

####################################################################################

Kind: Service
apiVersion: v1
metedata:
  name: django-pod
  namespace: django-app 
spec:
  selector:
    app: node
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP

###########################################################################################

kind: Service
apiVersion: v1
metadata:
  name: django-pod
  namespace: django-app
spec:
  selector:
    app: node
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP

###################################################################################################

Kind: Service
apiVersion:  v1
metadata:
  name: django-pod
  namespace: django-app
spec:
  selector:
    app: django
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: CLusterIP


#################################################################################################

Kind: Service
apiVersion: v1
metadata:
  name: django-pod
  namespace: django-app
spec:
  selector:
    app: django
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP

#################################################################################################

Kind: Service
apiVersion: v1
metadata:
  name: node-pod
  namespace: node-app
spec:
  selector:
    app: node
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP


################################################################################################

Kind: Service
apiVersion: v1
metadata:
  name: node-pod
  namespace: node-app
spec:
  selector:
    app: node
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP

######################################################################################################


kind: Service
apiVersion: v1
metedata:
  name: django-pod
  namespace: django-app
spec:
  selector:
    app: django
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP

######################################################################################################

kind: Service
apiVersion: v1
metadata:
  name: django-pod
  namespace: djnago-app
spec:
  selector:
    app: django
  ports:
  - protocol: TCP
    ports: 80
    targetPort: 80
  type: ClusterIP

########################################################################################################

kind: Service
apiVersion: v1
metadata:
  name: node-pod
  namespace: node-app
spec:
  selector:
    app: node
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP

#####################################################################################################

Kind: Service
apiVersion: v1
metadata:
  name: django-pod
  namespace: django-app
spec:
  selector:
    app: djnago
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP


##########################################################################################################

Kind: Service
apiVersion: v1
metadata:
  name: node-pod
  namespace: node-app
spec:
  selector:
    app: node
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP

############################################################################################################


kind: Service
apiVersion: v1
metadata:
  name: django-pod
  namespace: django-pod
spec:
  selector:
    app: django
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP                                                                                                                   15

####################################################################################################################

kind: Service
apiVersion: v1
metadata:
  name: django-pod
  namespace: django-app
spec:
  selector:
    app: django
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP

#################################################################################################################

kind: Service
apiVersion: v1
metadata:
  name: flask-pod
  namespace: flask-app
spec:
  selector:
    app: flask
  ports:
  - prortocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP

#######################################################################################################################


kind: Service
apiVersion: v1
metadata:
  name: flask
  namespace: flask-app
spec:
  selector:
    app: flask
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP


##########################################################################################################################

kind: Service
apiVersion: v1
metadata:
  name: django
  namespace: django-app
spec:
  selector:
    app: django
  spec:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP

####################################################################################################################


kind: Service
apiVersion: v1
metadata:
  name: django
  namespace: django
spec:
  selector:
    app: django
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    type: ClusterIP

##################################################################################################################

kind: Service
apiVersion: v1
metadata:
  name: node
  namespace: node-app
spec:
  selector:
    app: node
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    type: ClusterIP

#################################################################################################################

kind: Service
apiVersion: v1
metadata:
  name: django
  namespace: django
spec:
  selector:
    app: django
  ports:
  - protocol: TCP
    ports: 80
    targetPort: 80
    type: CLusterIP


########################################################################################################################

kind: Service
apiVersion: v1
metadata:
  name: django
  namespace: django
spec:
  selector:
    app: django
  ports:
  - protocol: TCP
    port: 80
    targetport: 80
    type: ClusterIP

###########################################################################################################################

kind: Service
apiVersion: v1
metadata:
  name: django
  namespace: django
spec:
  selector:
    app: django
  spec:
  - protocol: TCP
    port: 80
    targetPort: 80
    type: ClusterIP                                                                                                                   24

###############################################################################################################################
 
kind: Service
apiVersion: v1
metadata: 
  name: django
  namespace: django
spec:
  selector:
    matchLabels:
      app: django
    spec:
    - protocol: TCP
      port: 80
      targetPort: 80
      type: ClusterIP


############################################################################################################################

kind: Service
apiVersion: v1
metadata:
  name: django
  namespace: django
spec:
  selector:
    matchLabels:
      app: django
    spec:
    - protocol: TCP
     port: 80
     targetPort: 80
     type: ClusterIP

###########################################################################################################################

kind: Service
apiVersion: v1
metadata:
  name: django
  namespace: django
spec:
  selector:
    matchLabels:
      app: django
    spec:
    - protocol: TCP
      port: 80
      targetPort: 80
      type: ClusterIP

###################################################################################################################

kind: Service
apiVersion: v1
metadata:
  name: django
  namespace: django
spec:
  type: ClusterIP
  selector:
      app: django
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000

#####################################################################################################################


kind: Service
apiVersion: v1
metadata:
  name: node
  namespace: node-app
spec:
  selector:
    app: node
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000


###################################################################################################################

Kind: Service
apiVersion: v1
metadata:
  name: django
  namespace: django-app
spec:
  selector:
    app: django
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000



#####################################################################################

kind: Service
apiVersion: v1
metadata:
  name: node
  namespace: node-ns
spec:
  type: ClusterIP
  selector:
    app: node
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000

###############################################################################

kind: Service
apiVersion: v1
metadata:
  name: node
  namespace: node-app
spec:
  type: ClusterIP
  selector:
    app: node
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000




##################################################################################

Kind: Service
apiVersion: v1
metadata:
  name: node
  namespace: node-app
spec:
  type: ClusterIP
  selector:
    app: node
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000

####################################################################################

Kind: Service
apiVersion: v1
metadata:
  name: python
  namespace: python-app
spec:
  type: ClusterIP
  selector:
    app: python
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000

#####################################################################################

kind: Service
apiVersion: v1
metadata:
  name: python
  namespace: python-ns
spec:
  type: ClusterIP
  selector:
    app: django
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000

#######################################################################################

Kind: Service
apiVersion: v1
metadata:
  name: django
  namespace: djnago-ns
spec:
  type: ClusterIP
  selector:
    app: django
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000

###############################################################################################

kind: Service
apiVersion: v1
metadata:
  name: node-service
  namespace: node-ns
spec:
  selector:
    app: node
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000

###########################################################################################

kind: Service
apiVersion: v1
metadata:
  name: django
  namespace: django-ns
spec:
  selector:
    app: django
  ports:
  - protocol: TCP
    ports: 8000
    targetPort: 8000


###########################################################################################

kind: Service
apiVersion: v1
metadata:
  name: node-service
  namespace: node-app-ns
spec:
  selector:
    app: node
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000


############################################################################################

kind: Service
apiVersion: v1
metadata:
  name: django-app-service
  namespace: django-app
spec:
  type: ClusterIP
  selector:
    app: django-app
  ports:
    protocol: TCP
    port: 8000
    targePort: 8000

#############################################################################################

Kind: Service
apiVersion: v1
metadata:
  name: django-app-service
  namespace: django-app
spec:
  type: ClusterIP
  selector: 
    app: django-app
  ports:
    protocol: TCP
    ports: 8000
    targetPort: 8000

##############################################################################################

kind: Service
apiVersion: v1
metadata:
  name: django-app-service
  namespace: django-app
spec: 
  type: ClusterIP
  selector:
    app: django-app
  ports: 
    - protocol: TCP
      port: 8000
      targetPort: 8000

#####################################################################################

kind: Service
apiVersion: v1
metadata:
  name: django-service
  namespace: django-app
spec:
  type: CLusterIP
  selector:
    app: django-app
  ports:
    - port: 8000
      targetPort: 8000

#######################################################################################


kind: Service
apiVersion: v1
metadata:
  name: node
  namespace: node-app
spec:
  type: ClusterIP
  selector:
    app: node-app
  ports:
    - port: 8000
      targetPort: 8000

######################################################################################

kind: Service
apiVersion: v1
metadata:
  name: node
  namespace: node-app
spec:
  type: ClusterIP
  selector:
    app: node-app
  ports:
    - port: 8000
      targetPort: 8000

######################################################################################

kind: Service
apiVersion: v1
metadata:
  name: django-app
  namespace: djnago
spec:
  type: ClusterIP
  selector: 
    app: django-app
  ports:
    - port: 8000
      targetPort: 8000
      
######################################################################################

kind: Service
apiVersion: v1
metadata:
  name: django-app
  namespace: django
spec:
  type: ClusterIP
  selector:
    app: django-app
  ports:
  - port: 8000
    targetPort: 8000

#########################################################################################

kind: Service
apiVersion: v1
metadata:
  name: django-app
  namespace: djnago
spec:
  type: ClusterIP
  selector:
    app: django
  ports:
  - port: 8000
    targetPort: 8000
