Kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: nginx
  annotations:
    # This magic line fixes the Apache /home issue by stripping the subpath
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: "/home"
        pathType: Prefix
        backend:
          service:
            name: apache
            port:
              number: 80
      - path: "/tomcat" 
        pathType: Prefix
        backend:
          service:
            name: tomcat
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
